--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <img src="images/image1.jpg" alt="Black and white photo of Melbourne buildings">
             </div>
             <div class="msg-wrapper">
-                <div class="item item-1 title-item">About Us</div>
+                <div class="item item-1 title-item">ABOUT US</div>
                 <div class="item item-2">Message 1</div>
                 <div class="item item-3">Message 2</div>
                 <div class="item item-4">Message 3</div>
@@ -63,7 +63,7 @@
                 <img src="images/image2.jpg" alt="Black and white photo of Melbourne buildings">
             </div>
             <div class="msg-wrapper">
-                <div class="item item-1 title-item">Electrical</div>
+                <div class="item item-1 title-item">ELECTRICAL</div>
                 <div class="item item-2">Installations</div>
                 <div class="item item-3">Repairs</div>
                 <div class="item item-4">Fault Finding</div>
@@ -84,7 +84,7 @@
                 <img src="images/image3.jpg" alt="Black and white photo of Melbourne buildings">
             </div>
             <div class="msg-wrapper">
-                <div class="item item-1 title-item">Title 3</div>
+                <div class="item item-1 title-item">DATA</div>
                 <div class="item item-2">Message 1</div>
                 <div class="item item-3">Message 2</div>
                 <div class="item item-4">Message 3</div>
@@ -105,7 +105,7 @@
                 <img src="images/image4.jpg" alt="Black and white photo of Melbourne buildings">
             </div>
             <div class="msg-wrapper">
-                <div class="item item-1 title-item">Title 4</div>
+                <div class="item item-1 title-item">TESTING</div>
                 <div class="item item-2">Message 1</div>
                 <div class="item item-3">Message 2</div>
                 <div class="item item-4">Message 3</div>
@@ -126,7 +126,7 @@
                 <img src="images/image5.jpg" alt="Black and white photo of Melbourne buildings">
             </div>
             <div class="msg-wrapper">
-                <div class="item item-1 title-item">Title 5</div>
+                <div class="item item-1 title-item">CONTACT US</div>
                 <div class="item item-2">Message 1</div>
                 <div class="item item-3">Message 2</div>
                 <div class="item item-4">Message 3</div>
