--- a/index.html
+++ b/index.html
@@ -7,13 +7,19 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/styles.css">
     <title>Wires and More</title>
+    <meta name="description"
+        content="Wires and More - Your trusted partner for electrical, data, testing, and maintenance services in Melbourne.">
+    <meta name="keywords" content="Electrical, Data, Testing, Maintenance, Melbourne, Wires and More">
 </head>
 
 <body>
     <!-- Header Section -->
-    <header></header>
+    <header>
+        <h1></h1>
+    </header>
+
     <!-- Nav Section -->
-    <nav class="navbar">
+    <nav class="navbar" role="navigation">
         <div class="logo">
             <img src="images/logo.png" alt="Wires and More Logo">
         </div>
@@ -22,7 +28,7 @@
             <li class="menu-item"><a href="#electrical">Electrical</a></li>
             <li class="menu-item"><a href="#data">Data</a></li>
             <li class="menu-item"><a href="#testing">Testing</a></li>
-            <li class="menu-item contact-item"><a href="#contact">Contact</a></li>
+            <li class="menu-item contact-item ribbon"><a href="#contact">Contact</a></li>
             <li class="icon"><a href="javascript:void(0);" class="menu-icon" onclick="toggleMenu()"><i
                         class="fa fa-bars"></i></a></li>
         </ul>
@@ -34,116 +40,131 @@
             <li class="dropdown-menu-item contact-item"><a href="#contact">Contact</a></li>
         </ul>
     </nav>
+
     <main>
         <!-- Home Section -->
-        <div id="home" class="home">
+        <section id="home" class="home" role="region" aria-labelledby="home-title">
+            <h2 id="title" class="hidden title">Home</h2>
             <div class="top-wrapper"></div>
             <div class="img-wrapper">
                 <img src="images/image1.jpg" alt="Black and white photo of Melbourne buildings">
             </div>
             <div class="msg-wrapper">
-                <div class="item item-1 title-item">ABOUT US</div>
-                <div class="item item-2">Message 1</div>
-                <div class="item item-3">Message 2</div>
-                <div class="item item-4">Message 3</div>
-                <div class="item item-5">Message 4</div>
+                <div class="item item-1 title-item title">ABOUT US</div>
+                <div class="item item-2">
+                    <div class="rounded-tab"></div>
+                </div>
+                <div class="item item-3"></div>
+                <div class="item item-4"></div>
+                <div class="item item-5"></div>
             </div>
             <div class="tip-wrapper">
                 <div class="item item-1 title-item">Featured Clients</div>
-                <div class="item item-2"><img class="client client-1" src="images/client11.png" alt="Client 1"></div>
-                <div class="item item-3"><img class="client client-2" src="images/client11.png" alt="Client 2"></div>
-                <div class="item item-4"><img class="client client-3" src="images/client11.png" alt="Client 3"></div>
-                <div class="item item-5"><img class="client client-4" src="images/client11.png" alt="Client 4"></div>
+                <div class="item item-2"> <img class=" client client-1" src="images//client1.png" alt="Client 1 Logo">
+                </div>
+                <div class="item item-3"><img class="client client-2" src="images/client1.png" alt="Client 2 Logo">
+                </div>
+                <div class="item item-4"><img class="client client-3" src="images/client1.png" alt="Client 3 Logo">
+                </div>
+                <div class="item item-5"><img class="client client-4" src="images/client1.png" alt="Client 4 Logo">
+                </div>
             </div>
-        </div>
+        </section>
+
         <!-- Electrical Section -->
-        <div id="electrical" class="electrical">
+        <section id="electrical" class="electrical" role="region" aria-labelledby="electrical-title">
             <div class="top-wrapper"></div>
             <div class="img-wrapper">
                 <img src="images/image2.jpg" alt="Black and white photo of Melbourne buildings">
             </div>
             <div class="msg-wrapper">
                 <div class="item item-1 title-item">ELECTRICAL</div>
-                <div class="item item-2">Installations</div>
-                <div class="item item-3">Repairs</div>
-                <div class="item item-4">Fault Finding</div>
-                <div class="item item-5">Message 4</div>
+                <div class="item item-2"></div>
+                <div class="item item-3"></div>
+                <div class="item item-4"></div>
+                <div class="item item-5"></div>
             </div>
             <div class="tip-wrapper">
-                <div class="item item-1 title-item">Title 2</div>
-                <div class="item item-2">Tip 1</div>
-                <div class="item item-3">Tip 2</div>
-                <div class="item item-4">Tip 3</div>
-                <div class="item item-5">Tip 4</div>
+                <div class="item item-1 title-item"></div>
+                <div class="item item-2"></div>
+                <div class="item item-3"></div>
+                <div class="item item-4"></div>
+                <div class="item item-5"></div>
             </div>
-        </div>
+        </section>
+
         <!-- Data Section -->
-        <div id="data" class="data">
+        <section id="data" class="data" role="region" aria-labelledby="data-title">
             <div class="top-wrapper"></div>
             <div class="img-wrapper">
                 <img src="images/image3.jpg" alt="Black and white photo of Melbourne buildings">
             </div>
             <div class="msg-wrapper">
                 <div class="item item-1 title-item">DATA</div>
-                <div class="item item-2">Message 1</div>
-                <div class="item item-3">Message 2</div>
-                <div class="item item-4">Message 3</div>
-                <div class="item item-5">Message 4</div>
+                <div class="item item-2"></div>
+                <div class="item item-3"></div>
+                <div class="item item-4"></div>
+                <div class="item item-5"></div>
             </div>
             <div class="tip-wrapper">
-                <div class="item item-1 title-item">Title 3</div>
-                <div class="item item-2">Tip 1</div>
-                <div class="item item-3">Tip 2</div>
-                <div class="item item-4">Tip 3</div>
-                <div class="item item-5">Tip 4</div>
+                <div class="item item-1 title-item"></div>
+                <div class="item item-2"></div>
+                <div class="item item-3"></div>
+                <div class="item item-4"></div>
+                <div class="item item-5"></div>
             </div>
-        </div>
+        </section>
+
         <!-- Testing Section -->
-        <div id="testing" class="testing">
+        <section id="testing" class="testing" role="region" aria-labelledby="testing-title">
             <div class="top-wrapper"></div>
             <div class="img-wrapper">
                 <img src="images/image4.jpg" alt="Black and white photo of Melbourne buildings">
             </div>
             <div class="msg-wrapper">
                 <div class="item item-1 title-item">TESTING</div>
-                <div class="item item-2">Message 1</div>
-                <div class="item item-3">Message 2</div>
-                <div class="item item-4">Message 3</div>
-                <div class="item item-5">Message 4</div>
+                <div class="item item-2"></div>
+                <div class="item item-3"></div>
+                <div class="item item-4"></div>
+                <div class="item item-5"></div>
             </div>
             <div class="tip-wrapper">
-                <div class="item item-1 title-item">Title 4</div>
-                <div class="item item-2">Tip 1</div>
-                <div class="item item-3">Tip 2</div>
-                <div class="item item-4">Tip 3</div>
-                <div class="item item-5">Tip 4</div>
+                <div class="item item-1 title-item">Testing Tips</div>
+                <div class="item item-2"></div>
+                <div class="item item-3"></div>
+                <div class="item item-4"></div>
+                <div class="item item-5"></div>
             </div>
-        </div>
+        </section>
+
         <!-- Contact Section -->
-        <div id="contact" class="contact">
+        <section id="contact" class="contact" role="region" aria-labelledby="contact-title">
             <div class="top-wrapper"></div>
             <div class="img-wrapper">
                 <img src="images/image5.jpg" alt="Black and white photo of Melbourne buildings">
             </div>
             <div class="msg-wrapper">
-                <div class="item item-1 title-item">CONTACT US</div>
-                <div class="item item-2">Message 1</div>
-                <div class="item item-3">Message 2</div>
-                <div class="item item-4">Message 3</div>
-                <div class="item item-5">Message 4</div>
-            </div>
-            <div class="tip-wrapper">
-                <div class="item item-1 title-item">FIND US ON</div>
-                <div class="item item-2"></div>
-                <div class="item item-3"><i class="fa fa-facebook-square" aria-hidden="true"></i></div>
-                <div class="item item-4"><i class="fa fa-twitter-square" aria-hidden="true"></i></div>
+                <div class="item item-1 title-item">CONTACT</div>
+                <div class="item item-2"><a href="mailto:"></a></div>
+                <div class="item item-3"><a href="tel:0000000000"></a></div>
+                <div class="item item-4"></div>
                 <div class="item item-5"></div>
             </div>
-        </div>
+            <div class="tip-wrapper">
+                <div class="item item-1 title-item"></div>
+                <div class="item item-2"></div>
+                <div class="item item-3"></div>
+                <div class="item item-4"></div>
+                <div class="item item-5"></div>
+            </div>
+        </section>
     </main>
+
+    <!-- Footer Section -->
     <footer>
-        <small>&copy; 2024 Wires and More</small>
+        <p>&copy; 2023 Wires and More. All rights reserved.</p>
     </footer>
+
     <script src="scripts/main.js"></script>
 </body>
 
