--- a/index.html
+++ b/index.html
@@ -60,13 +60,13 @@
             </div>
             <div class="tip-wrapper">
                 <div class="item item-1 title-item">Featured Clients</div>
-                <div class="item item-2"> <img class=" client client-1" src="images//client1.png" alt="Client 1 Logo">
+                <div class="item item-2"> <img class=" client client-1" src="images/cclient1.png" alt="Client 1 Logo">
                 </div>
-                <div class="item item-3"><img class="client client-2" src="images/client1.png" alt="Client 2 Logo">
+                <div class="item item-3"><img class="client client-2" src="images/cclient1.png" alt="Client 2 Logo">
                 </div>
-                <div class="item item-4"><img class="client client-3" src="images/client1.png" alt="Client 3 Logo">
+                <div class="item item-4"><img class="client client-3" src="images/cclient1.png" alt="Client 3 Logo">
                 </div>
-                <div class="item item-5"><img class="client client-4" src="images/client1.png" alt="Client 4 Logo">
+                <div class="item item-5"><img class="client client-4" src="images/cclient1.png" alt="Client 4 Logo">
                 </div>
             </div>
         </section>
