adjust colors and remove details

--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
                 <img src="images/image1.jpg" alt="Black and white photo of Melbourne buildings">
             </div>
             <div class="msg-wrapper">
-                <div class="item item-1 title-item title">ABOUT US</div>
+                <div class="item item-1 title-item title">
+                </div>
                 <div class="item item-2">
                     <div class="rounded-tab"></div>
                 </div>
@@ -59,14 +60,14 @@
                 <div class="item item-5"></div>
             </div>
             <div class="tip-wrapper">
-                <div class="item item-1 title-item">Featured Clients</div>
-                <div class="item item-2"> <img class=" client client-1" src="images/cclient1.png" alt="Client 1 Logo">
+                <div class="item item-1 title-item"></div>
+                <div class="item item-2"> <img class=" client client-1" src="images/cclient1.png" alt="">
                 </div>
-                <div class="item item-3"><img class="client client-2" src="images/cclient1.png" alt="Client 2 Logo">
+                <div class="item item-3"><img class="client client-2" src="images/cclient1.png" alt="">
                 </div>
-                <div class="item item-4"><img class="client client-3" src="images/cclient1.png" alt="Client 3 Logo">
+                <div class="item item-4"><img class="client client-3" src="images/cclient1.png" alt="">
                 </div>
-                <div class="item item-5"><img class="client client-4" src="images/cclient1.png" alt="Client 4 Logo">
+                <div class="item item-5"><img class="client client-4" src="images/cclient1.png" alt="">
                 </div>
             </div>
         </section>
@@ -129,7 +130,7 @@
                 <div class="item item-5"></div>
             </div>
             <div class="tip-wrapper">
-                <div class="item item-1 title-item">Testing Tips</div>
+                <div class="item item-1 title-item"></div>
                 <div class="item item-2"></div>
                 <div class="item item-3"></div>
                 <div class="item item-4"></div>
